# souse

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: form.tsx  misc.tsx  popup.tsx
src/components/app/: Avatar.tsx  Roster.tsx
src/components/popups/: SignIn.tsx
src/lib/: elements.tsx  errors.ts  hooks.tsx  tauri.tsx  types.ts
src/lib/stores/: accounts.tsx  cache.tsx  connection.tsx  popup.tsx  roster.tsx  settings.tsx
src/routes/: app.tsx  conversation.tsx
src/styles/: app.css.ts  forms.css.ts  main.css.ts  misc.css.ts  text.css.ts
