[package]
name = "souse"
version = "0.0.0"
authors = ["NotNite <hi@notnite.com>"]
license = "MIT"
repository = "https://github.com/NotNite/souse.git"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-file", "fs-write-file", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-xmpp = "3.3.0"
futures-util = "0.3.28"
futures = "0.3.28"
async-stream = "0.3.5"
xmpp-parsers = "0.19.2"
keyring = "2.0.3"
thiserror = "1.0.40"

[features]
custom-protocol = ["tauri/custom-protocol"]
